# cc-mini

./: .gitignore  README.md  pyproject.toml
src/core/: commands.py  compact.py  config.py  cost_tracker.py  engine.py  llm.py  main.py
src/core/buddy/: commands.py  observer.py
src/core/buddy/poke_game/: __init__.py  badges.py  battle.py  commands.py  events.py  lockfile.py  loop.py  narrator.py  persistence.py  render.py  state.py  types.py  world.py
src/core/buddy/poke_game/history_record/: Refine_No1.md  begin.md
tests/: test_config.py  test_cost_tracker.py  test_engine.py  test_llm.py  test_main.py
