[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cc-mini"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "prompt_toolkit>=3.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
cc-mini = "core.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
